# search_engine

./: .gitignore  CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  LICENSE  Logger.h  README.md  SearchServer.cpp  SearchServer.h  answers.json  config.json  main.cpp  requests.json
include/: ConverterJSON.h  InvertedIndex.h
resources/: file001.txt  file002.txt  file003.txt
src/: ConverterJSON.cpp  main.cpp
tests/: test_search_engine.cpp
